Updated headers to pass coding guidelines